# bytebrain

./: .env.template  .gitignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yaml  nginx.conf  pyproject.toml  shell.nix
bytebrain-client/: Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json
bytebrain-client/letsencrypt/: config.json
bytebrain-client/letsencrypt/html/: index.html
bytebrain-client/public/: index.html
bytebrain-client/src/: index.js
bytebrain-client/src/stories/: FeedbackForm.jsx  FeedbackForm.stories.js  (+1 more)
bytebrain-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
bytebrain-dashboard/src/: ApiKeyComponent.tsx  ApiKeyForm.tsx  ApiKeyPage.tsx  ApiKeyTable.tsx  App.css  App.tsx  AuthApp.tsx  ChatModelPage.tsx  DashboardLayout.tsx  DataSourceTable.tsx  GitHubForm.tsx  LoginPage.tsx  NavBar.tsx  NewApiKeyDialog.tsx  NewDataSourceDialog.tsx  Profile.tsx  Projects.tsx  Resources.tsx  RootApp.tsx  Signup.tsx  WebpageForm.tsx  WebsiteForm.tsx  YoutubeForm.tsx  index.css  main.tsx  project-switcher.tsx
bytebrain-server/: .gitignore  Dockerfile  backup_db.sh  bytebrain.yml  config.py  main.py  prometheus.py  prometheus.template.yml  pyproject.toml  rsync_db.sh
bytebrain-server/core/: ChannelHistory.py  DiscordMessage.py  __init__.py  chatbot.py  chatbot_v2.py  chorma_db.py  db.py  discord.py  discord_bot.py  document_loader.py  export_discord.py  main.py  stored_docs.py  upgrade_sqlite.py  utils.py  weaviate_db.py  webserver.py  webservice.py
bytebrain-server/core/bots/discord/: ChannelHistory.py  discord_bot.py  discord_loader.py  discord_utils.py
bytebrain-server/core/bots/web/: auth.py  dependencies.py  feedback_service.py  feedbacks.py  webservice.py
bytebrain-server/core/bots/web/dummy/: chat.md
bytebrain-server/core/bots/web/routers/: auth.py  chat.py  feedbacks.py  projects.py  resources.py  users.py
bytebrain-server/core/dao/: apikey_dao.py  chatmodel_dao.py  feedback_dao.py  metadata_dao.py  project_dao.py  resource_dao.py  user_dao.py
bytebrain-server/core/docs/: chorma_db.py  discord.py  discord_loader.py  document_indexer.py  document_loader.py  document_service.py  index.py  metadata_service.py  resource_dao.py  resource_service.py  stored_docs.py  weaviate_db.py
bytebrain-server/core/dummy/: chat.md
bytebrain-server/core/llm/: callbacks.py  chains.py  chatbot.py  chatbot_v2.py
bytebrain-server/core/models/discord/: ChannelHistory.py  DiscordMessage.py
bytebrain-server/core/services/: TODO.md  document_service.py  project_service.py  resource_service.py  vectorstore_service.py
bytebrain-server/core/static/static/css/: main.57ebd672.css
bytebrain-server/core/static/static/js/: 787.a0f02e3e.chunk.js  787.a0f02e3e.chunk.js.map  main.ba586e32.js  main.ba586e32.js.map
bytebrain-server/core/utils/: github.py  upgrade_sqlite.py  utils.py  youtube.py
bytebrain-server/dev/: async-pubsub.py  chromadb.py  chromadb_example.py  conversational-retrieval-chain-with-custom-prompt-example.py  conversational_retrieval_chain_example.py  crawl.py  crawl_and_load_website.py  create_chroma_db.py  db_example.py  discord_bot_example.py  discord_history.py  embedding_example.py  fallback_example.py  final_solution.py  pattern_matching.py  predict_hi.py  pub_sub.py  query_db_example.py  retrieval-qa-example.py  retrieval-qa-with-sources-example.py  retrieval-qa-with-sources-example_2.py  runnable_attach_openai_functions.py  runnable_binding_example.py  runnable_example.py  runnable_passthrough_example.py  sample_text_splitter.py  security.py  simple_openai.py  stuff-example.py  symantic-blocking-pub-sub.py  three_chain_step.py  two_chain_step.py  weaviate_create_class.py  weaviate_embedded_example.py  weaviate_example.py  weaviate_load_zio_docs_example.py  weaviate_query_example.py  youtube-example.py
bytebrain-server/index/: index.py  zio-ecosystem.json
bytebrain-server/tests/: __init__.py  test_annotate_chat_history.py  test_configs.py  test_index_discord.py  test_sample_text_splitter.py  test_split_string.py  test_stored_docs.py
bytebrain-server/tests/core/bots/web/: TestFeedbackService.py
bytebrain-server/tests/core/docs/: stored_docs_service_test.py
bytebrain-ui/: babel.config.js  package-lock.json  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
bytebrain-ui/.storybook/: main.js  preview.js
bytebrain-ui/public/: index.html
bytebrain-ui/src/: index.js
letsencrypt/: README.md
scripts/: generate_changelog.py
scripts/weaviate/: README.md  docker-compose.yml
weaviate/: docker-compose.yml
weaviate_docker_compose/: Dockerfile
web-components/: package-lock.json  package.json  tailwind.config.js
zio-chat-client/: package-lock.json  package.json
zio-chat-client/.storybook/: preview.js
zio-chat-client/public/: index.html  manifest.json
zio-chat-client/src/: index.js
zio-chat-server/: Dockerfile  bytebrain.yml  config.py  main.py  pyproject.toml  zio-ecosystem.json
zio-chat-server/core/: chatbot.py  index.py  main.py
zio-chat-server/core/dev/: custom_conversational_chain.py  final_solution.py
zio-chat-server/core/dummy/: chat.md
zio-chat-server/core/static/static/css/: main.57ebd672.css.map
zio-chat-server/dev/: crawl.py  final_solution.py
zio-chat-server/zio_chat/: callbacks.py  chatbot.py  discord.py  discord_history.py  index.py  main.py  restapi.py
zio-chat-server/zio_chat/dev/: crawl.py  final_solution.py  three_chain_step.py  two_chain_step.py
zio-chat-server/zio_chat/static/: asset-manifest.json  index.html
zio_chat/: index.py  restapi.py
(+67 files in other folders)
