[tool.poetry]
name = "zio-chat"
version = "0.1.0"
description = "Chat with ZIO"
authors = ["Milad Khajavi"]

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.95.1"
langchain = "0.0.194"
openai = "0.27.4"
tiktoken = "0.3.3"
chromadb = "0.3.21"
unstructured = "0.5.13"
youtube-transcript-api = "^0.6.0"
pytube = "^15.0.0"
google-api-python-client = "^2.88.0"
discord = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
webserver = "zio_chat.main:start"
index_zio_project_docs = "zio_chat.index:index_zio_project_docs"
index_zionomicon_book = "zio_chat.index:index_zionomicon_book"
index_zio_project_source_code = "zio_chat.index:index_zio_project_source_code"
index_all = "zio_chat_index:index_all"
index_youtube_video = "zio_chat.index:index_youtube_video"
discord_bot = "zio_chat.discord:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
