[tool.poetry]
name = "core"
version = "0.1.0"
description = "ByteBrain: Chat with Your Documents!"
authors = ["Milad Khajavi"]

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.95.1"
langchain = "0.0.194"
openai = "0.27.4"
tiktoken = "0.3.3"
chromadb = "0.3.21"
unstructured = "0.5.13"
youtube-transcript-api = "^0.6.0"
pytube = "^15.0.0"
google-api-python-client = "^2.88.0"
discord = "^2.2.3"
gitpython = "^3.1.31"
beautifulsoup4 = "^4.12.2"
structlog = "^23.1.0"
prometheus-client = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
config = "prometheus:configure"
webserver = "core.main:start"
dev_three_chain_step = "core.dev.three_chain_step:run"
dev_two_chain_step = "core.dev.two_chain_step:run"
dev_final_solution = "core.dev.final_solution:run"
index_zio_project_docs = "core.index:index_zio_project_docs"
index_zionomicon_book = "core.index:index_zionomicon_book"
index_zio_project_source_code = "core.index:index_zio_project_source_code"
index_all = "core.index:index_all"
index_youtube_video = "core.index:index_youtube_video"
discord_bot = "core.discord:main"
download_discord_channel = "core.discord_history:main"
index_zio_ecosystem_source_code = "core.index:index_zio_ecosystem_source_code"
get_zio_ecosystem_repo_info = "core.index:get_zio_ecosystem_repo_info"
crawl = "core.dev.crawl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
